// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NodeCard: actions coinbase  load 1`] = `
Object {
  "coinbase": Object {
    "coinbase": "82069cc441c42b2706fa5d3129deeb677812e5a5",
  },
  "type": "PRELOAD_COINBASE",
}
`;

exports[`NodeCard: actions coinbase  update 1`] = `
Object {
  "coinbase": Object {
    "coinbase": null,
  },
  "type": "UPDATE_COINBASE",
}
`;

exports[`NodeCard: actions peers load 1`] = `
Object {
  "peers": Object {},
  "type": "PRELOAD_PEERS",
}
`;

exports[`NodeCard: actions peers update 1`] = `
Object {
  "peers": Object {
    "192.168.10.33": Object {
      "pubkey": "687294782948972018571047ra9asd8f97381asdfasd",
      "tcp_port": "30303",
    },
    "192.168.10.36": Object {
      "pubkey": "687294782948972018571047ra9asd8f97381asdfasd",
      "tcp_port": "30303",
    },
  },
  "type": "UPDATE_PEERS",
}
`;
